service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rajiv-app-service
spec:
  type: ClusterIP
  selector:
    app: rajiv-app
  ports:
  - port: 80
    targetPort: 3000
